fix: wrap element code and element pre

--- a/frontend/scss/atoms/_code.scss
+++ b/frontend/scss/atoms/_code.scss
@@ -5,4 +5,5 @@ code{
   font-family: Consolas, "Liberation Mono", Courier, monospace;
   font-weight: 400;
   color: var(--color-cannes);
+  white-space: nowrap;
 }
