--- a/frontend/scss/molecules/_pre.scss
+++ b/frontend/scss/molecules/_pre.scss
@@ -5,5 +5,6 @@ pre{
     color: var(--color-cannes);
     display: inline;
     max-width: 100%;
+    white-space: unset;
   }
 }
